# userkit

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: tests.yml
src/: cli.rs  main.rs  shell.rs  user.rs
tests/: common.rs  config_tests.rs  group_tests.rs  guest_tests.rs  perm_tests.rs  role_tests.rs  shell_tests.rs  test_utils.rs  user_tests.rs
