[package]
name = "userkit"
version = "0.1.0"
edition = "2024"
description = "User management kit"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.18.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
